# Corsac

./: .gitignore  CMakeLists.txt  makefile
DATA/: app.c  app.h
cmd/: main.c
docs/: README.md  slice.md
include/: array.h  memory.h  panic.h  slice.h  sparse_set.h
src/: array.c  slice.c  sparse_set.c
